# r2common

./: .gitignore  CLAUDE.md  CMakeLists.txt  R2CommonLog.h  R2Logger.h  README.md  Result.h  library.json  library.properties  platformio.ini
Network/: ESPNetwork.cpp
examples/http_request/: platformio.ini
examples/http_request/src/: main.cpp
examples/r2web3.example/: platformio.ini  r2web3.example.ino
examples/r2web3.example/src/: main.cpp
lib/r2common/: library.json
lib/r2common/src/: R2Logger.cpp
lib/r2common/src/Network/: CurlNetwork.cpp  ESPNetwork.cpp  ESPNetwork.h
src/: main.cpp  r2web3.h
src/Blockchain/: Account.cpp  Chain.cpp  Chain.h  Contract.cpp  EthereumSigner.cpp
src/Blockchain/Internal/: Chain_ethRequest.cpp  Chain_ethRequest.h
src/Network/: CurlNetwork.cpp  CurlNetwork.h  ESPNetwork.cpp  ESPNetwork.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  NetworkFacade.h
src/Shared/: Common.cpp  Common.h  R2Web3Log.cpp  R2Web3Log.h  Result.cpp  configuration.h
src/r2Common/Network/: CurlNetwork.cpp  ESPNetwork.cpp  HttpResponse.h
